2007-03-21  Guillem Jover  <guillem@debian.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.16.1.

2007-03-20  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-source.pl ($diff_ignore_default_regexp): Add '.hg'.

2007-03-13  Guillem Jover  <guillem@debian.org>

	* scripts/controllib.pl (parsechangelog): Only binmode CDATA from the
	parent side of the opened pipe, on the child side binmode STDOUT.

2007-03-13  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-shlibdeps.pl: Use new style file handler references.

2007-03-13  Guillem Jover  <guillem@debian.org>

	* lib/compression.c (compress_cat): Support compress_type_lzma.
	* dpkg-deb/build.c (do_build): Likewise.
	* dpkg-deb/main.c (usage): Document that '-Z' now accepts lzma as well.
	(setcompresstype): Parse 'lzma' as compress_type_lzma.

2007-03-12  Guillem Jover  <guillem@debian.org>

	* scripts/changelog/debian.pl: Fix call to outputclose by not passing
	anything to it.
	($varlistfile): Remove unused variable.

2007-03-12  Guillem Jover  <guillem@debian.org>

	* lib/dpkg.h (compression_type): Rename to ...
	(compress_type): ... this. Fix all users.
	(CAT): Rename to ...
	(compress_type_cat): ... this. Fix all users.
	(GZ): Rename to ...
	(compress_type_gzip): ... this. Fix all users.
	(BZ2): Rename to ...
	(compress_type_bzip2): ... this. Fix all users.

2007-03-06  Guillem Jover  <guillem@debian.org>

	* lib/compression.c (fd_fd_filter): New function, refactored. As
	a side effect the 'failed to exec' string gets unified, and all
	commands use oshite now.
	(decompress_cat): Use fd_fd_filter instead of the duped code.
	(compress_cat): Likewise.

2007-03-06  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-scanpackages.pl (usage): Documemt that the override
	file is now optional.
	(load_override): New function, refactored. Handle the case where
	'$override' is undefined.

2007-02-28  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-checkbuilddeps.pl: Make getopt parse '--admindir'.