@@ -12,7 +12,7 @@ DPKG_ARCHITECTURE
 
 AM_INIT_AUTOMAKE([1.8 gnu])
 
-AM_GNU_GETTEXT_VERSION(0.16.1)
+AM_GNU_GETTEXT_VERSION([0.16.1])
 AM_GNU_GETTEXT()
 
 # Allow compilation without dselect
@@ -72,7 +72,7 @@ fi
 
 # Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS([error.h sys/cdefs.h kvm.h])
+AC_CHECK_HEADERS([error.h locale.h sys/cdefs.h kvm.h])
 DPKG_CHECK_DEFINE(TIOCNOTTY, [sys/ioctl.h])
 
 # Checks for typedefs, structures, and compiler characteristics.
