@@ -1,5 +1,11 @@
 2007-03-21  Guillem Jover  <guillem@debian.org>
 
+	* configure.ac (AM_GNU_GETTEXT_VERSION): Quote the argument.
+	(AC_CHECK_HEADERS): Check for 'locale.h'.
+	* lib/gettext.h: Updated file from gettext 0.16.1.
+
+2007-03-21  Guillem Jover  <guillem@debian.org>
+
 	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.16.1.
 
 2007-03-20  Guillem Jover  <guillem@debian.org>
